--- a/options/options.html
+++ b/options/options.html
@@ -44,7 +44,13 @@
       />
     </div>
 
-    <button id="saveBtn">Save Settings</button>
+    <div class="button-group">
+  <button id="saveBtn" class="primary-btn">Save Settings</button>
+  <button id="resetBtn" class="secondary-btn">Reset to Defaults</button>
+</div>
+
+<p id="status"></p>
+
 
     <p id="status"></p>
   </div>
