--- a/options/options.html
+++ b/options/options.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>ReaderAssist Settings</title>
-  <link rel="stylesheet" href="options.css" />
+  <link rel="stylesheet" href="./options.css" />
 </head>
 <body>
+
   <div class="container">
     <h1>ReaderAssist Settings</h1>
 
@@ -14,7 +15,9 @@
       <div class="setting-row">
         <div class="setting-text">
           <div class="setting-title">Enable popup detection</div>
-          <div class="setting-desc">Show popup when membership notice is detected.</div>
+          <div class="setting-desc">
+            Show popup when membership notice is detected.
+          </div>
         </div>
         <label class="switch">
           <input type="checkbox" id="enablePopup">
@@ -25,7 +28,9 @@
       <div class="setting-row">
         <div class="setting-text">
           <div class="setting-title">Enable alternate view redirect</div>
-          <div class="setting-desc">Allow switching to alternate viewing mode.</div>
+          <div class="setting-desc">
+            Allow switching to alternate viewing mode.
+          </div>
         </div>
         <label class="switch">
           <input type="checkbox" id="enableRedirect">
@@ -45,16 +50,27 @@
     </div>
 
     <div class="button-group">
-  <button id="saveBtn" class="primary-btn">Save Settings</button>
-  <button id="resetBtn" class="secondary-btn">Reset to Defaults</button>
-</div>
+      <button id="saveBtn" class="primary-btn">Save Settings</button>
+      <button id="resetBtn" class="secondary-btn">Reset to Defaults</button>
+    </div>
 
-<p id="status"></p>
-
-
-    <p id="status"></p>
   </div>
 
-  <script src="options.js"></script>
+  <!-- Confirmation Modal -->
+  <div id="confirmModal" class="modal hidden">
+    <div class="modal-content">
+      <h3>Reset Settings?</h3>
+      <p>This will restore all settings to their default values.</p>
+      <div class="modal-actions">
+        <button id="cancelReset" class="secondary-btn">Cancel</button>
+        <button id="confirmReset" class="primary-btn">Confirm</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Toast -->
+  <div id="toast" class="toast hidden"></div>
+
+  <script src="./options.js"></script>
 </body>
 </html>
