Implement settings for extension enablement and URL redirection; add popup UI and functionality

--- a/options/options.html
+++ b/options/options.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8" />
   <title>ReaderAssist Settings</title>
   <link rel="stylesheet" href="./options.css" />
 </head>
+
 <body>
 
   <div class="container">
@@ -42,11 +44,7 @@
 
     <div class="setting-input">
       <label for="redirectUrl">Alternate View Base URL</label>
-      <input 
-        type="text" 
-        id="redirectUrl" 
-        placeholder="https://example.com/" 
-      />
+      <input type="text" id="redirectUrl" placeholder="https://example.com/" />
     </div>
 
     <div class="button-group">
@@ -73,4 +71,5 @@
 
   <script src="./options.js"></script>
 </body>
+
 </html>
